Add working Sax and Linq to Xml

--- a/Dormitory.html
+++ b/Dormitory.html
@@ -1,8 +1,6 @@
-﻿<html>
+﻿<html lang="en">
   <body>
-    <p>
-      <h2>Students in dormitory list</h2>
-    </p>
+    <h2>Students in dormitory list</h2>
     <table border="2">
       <tr>
         <th>FirstName</th>
@@ -14,94 +12,13 @@
         <th>WhenCheckedInto</th>
       </tr>
       <tr>
-        <td>Pavlo</td>
-        <td>Redko</td>
+        <td>Andriy</td>
+        <td>Fonar</td>
         <td>Computer Science and Cybernetics</td>
         <td>Computer Science</td>
-        <td>Second</td>
-        <td>833/2</td>
-        <td>09.2019</td>
-      </tr>
-      <tr>
-        <td>Yuriy</td>
-        <td>Poberezhnyi</td>
-        <td>Computer Science and Cybernetics</td>
-        <td>Computer Science</td>
-        <td>Second</td>
-        <td>233/2</td>
-        <td>02.2020</td>
-      </tr>
-      <tr>
-        <td>Olexandr</td>
-        <td>Marchuk</td>
-        <td>Computer Science and Cybernetics</td>
-        <td>Computer Science</td>
-        <td>Second</td>
-        <td>233/2</td>
-        <td>09.2019</td>
-      </tr>
-      <tr>
-        <td>Illya</td>
-        <td>Barancev</td>
-        <td>Informational Technologies</td>
-        <td>Software Engineering</td>
-        <td>Second</td>
-        <td>833/2</td>
-        <td>09.2019</td>
-      </tr>
-      <tr>
-        <td>Olexandr</td>
-        <td>Koshuba</td>
-        <td>Computer Science and Cybernetics</td>
-        <td>Computer Science</td>
-        <td>Second</td>
-        <td>0</td>
-        <td>11.2020</td>
-      </tr>
-      <tr>
-        <td>Kateryna</td>
-        <td>Andrushko</td>
-        <td>Geography</td>
-        <td>Meteorology</td>
-        <td>Second</td>
-        <td>353</td>
-        <td>09.2019</td>
-      </tr>
-      <tr>
-        <td>Mariya</td>
-        <td>Shvec</td>
-        <td>Chemistry</td>
-        <td>Chemistry</td>
-        <td>Second</td>
-        <td>324</td>
-        <td>09.2019</td>
-      </tr>
-      <tr>
-        <td>Roman</td>
-        <td>Semenchuk</td>
-        <td>Chemistry</td>
-        <td>Chemistry</td>
-        <td>Second</td>
-        <td>241</td>
-        <td>11.2019</td>
-      </tr>
-      <tr>
-        <td>Denys</td>
-        <td>Fedorovych</td>
-        <td>Physics</td>
-        <td>Physics</td>
-        <td>Second</td>
-        <td>743</td>
-        <td>09.2019</td>
-      </tr>
-      <tr>
-        <td>Rustem</td>
-        <td>Magnitskiy</td>
-        <td>Informational Technologies</td>
-        <td>Computer Science</td>
-        <td>Second</td>
-        <td>514</td>
-        <td>10.2019</td>
+        <td>First</td>
+        <td>803/3</td>
+        <td>09.2020</td>
       </tr>
     </table>
   </body>
