--- a/Dormitory.html
+++ b/Dormitory.html
@@ -12,13 +12,13 @@
         <th>WhenCheckedInto</th>
       </tr>
       <tr>
-        <td>Andriy</td>
-        <td>Fonar</td>
+        <td>Yuriy</td>
+        <td>Poberezhnyi</td>
         <td>Computer Science and Cybernetics</td>
         <td>Computer Science</td>
-        <td>First</td>
-        <td>803/3</td>
-        <td>09.2020</td>
+        <td>Second</td>
+        <td>233/2</td>
+        <td>02.2020</td>
       </tr>
     </table>
   </body>
