--- a/Dormitory.html
+++ b/Dormitory.html
@@ -12,13 +12,13 @@
         <th>WhenCheckedInto</th>
       </tr>
       <tr>
-        <td>Yuriy</td>
-        <td>Poberezhnyi</td>
-        <td>Computer Science and Cybernetics</td>
-        <td>Computer Science</td>
+        <td>Kateryna</td>
+        <td>Andrushko</td>
+        <td>Geography</td>
+        <td>Meteorology</td>
         <td>Second</td>
-        <td>233/2</td>
-        <td>02.2020</td>
+        <td>353</td>
+        <td>09.2019</td>
       </tr>
     </table>
   </body>
